kustomize/bases/librephotos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: librephotos
  labels:
    name: librephotos
