kustomize/bases/librephotos/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: librephotos
    app.kubernetes.io/instance: librephotos-backend
    app.kubernetes.io/version: "2024w14p1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: librephotos-backend
  template:
    metadata:
      # These are not needed by considered a good practice
      labels:
        app.kubernetes.io/name: backend
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: librephotos
        app.kubernetes.io/instance: librephotos-backend
        app.kubernetes.io/version: "2024w14p1"
    spec:
      containers:
        - name: librephotos
          image: reallibrephotos/librephotos:2024w14p1
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 256Gi
        storageClassName: longhorn-mirror-retain
